--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
     <title>prueba</title>
   </head>
   <body>
-    
+    <header>
+      <h2>Practicando claboración con Github</h2>   
+    </header>
+    <main>
+      <div>
+        <h3>Que Aprenderemos?</h3>
+        <p>Crearemos conflictos para practicar a solucionarlos en github</p>
+      </div>
+      <div>
+        <h3>Llegaremos a dominar comandos?</h3>
+        <p>Identificaremos los errores, los solucionaremos empleando:</p>
+        <p>1. git push</p>
+      </div>
+    </main>
+    <footer>
+      <a href="#">Sobre nosotras</a>
+      <a href="#"><i class="fa fa-facebook"></i></a>
+    </footer>
   </body>
 </html>
